# sentiment_package

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt  setup.py  tox.ini
sentiment/: __init__.py
sentiment/wsentiment/: wahatsappdataframe.py
src/evmotosentiment/: __init__.py
src/evmotosentiment/clean_message/: __init__.py  general_cleaner.py
src/evmotosentiment/wsentiment/: __init__.py  whatsappdataframe.py  whatsappsentiment.py
src/motoevsentiment/wsentiment/: __init__.py
src/sentiment/wsentiment/: __init__.py
tests/clean_message/: test_general_cleaner.py
tests/wsentiment/: test_wdataframe.py  test_wsentiment_score.py
