[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evmotosentiment"
version = "0.1.0"
description = "Package to analyse Motorcycle EV swap related issues"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "setuptools>=80.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
